<resources>
    <string name="app_name">Du_an_1_MOB</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loginsocial">Login With Social Account</string>
    <string name="sign">SIGN UP</string>
    <string name="donthave">Dont Have Account ?</string>
    <string name="manhinhchao">Chào mừng bạn đến với
phần mềm quản lý bán hàng CHaluHalu</string>
    <string name="danhsachorder">Danh sách order</string>
    <string name="sodo">Sơ đồ</string>
    <string name="danhsachhoadon">Danh sách hóa đơn</string>
    <string name="baocaodoanhthu">Báo cáo doanh thu</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="doan">Đồ ăn</string>
    <string name="douong">Đồ uống</string>
    <string name="loaidouong">Loại đồ uống</string>
    <string name="loaidoan">Loại đồ ăn</string>
    <string name="title_activity_list_order">ListOrderActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="onbd123456">onbd123456@gmail.com</string>
    <string name="doanhthu">Doanh thu :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
